--- a/env.toml
+++ b/env.toml
@@ -1,3 +1,5 @@
 [device]
-DEVICE_NAME = "bluejay"
-'GRAPHENEOS[UPDATE_CHANNEL]' = "alpha"
+DEVICE_NAME = "caiman"
+'GRAPHENEOS[UPDATE_CHANNEL]' = "stable"
+'MAGISK[PREINIT]' = "sda10"
+'ADDITIONALS[ROOT]' = "true"
